// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleLibrary renders closed when read-only 1`] = `
<ModuleLibrary
  addModule={[Function]}
  api={Object {}}
  isReadOnly={true}
  workflow={
    Object {
      "id": 15,
      "name": "What a workflow!",
    }
  }
>
  <div
    className="module-library-collapsed"
  >
    <div
      className="expand-lib"
    >
      <div
        className="expand-lib-button d-flex"
      >
        <div
          className="logo"
          onClick={[Function]}
        >
          <img
            src="/static/images/logo.png"
            width="20"
          />
        </div>
      </div>
    </div>
  </div>
</ModuleLibrary>
`;

exports[`ModuleLibrary renders open when not read-only, with list of module categories 1`] = `
<ModuleLibrary
  addModule={[Function]}
  api={
    Object {
      "getModules": [Function],
    }
  }
  isReadOnly={false}
  workflow={
    Object {
      "id": 15,
      "name": "What a workflow!",
    }
  }
>
  <div>
    <div
      className="module-library-open"
    >
      <div
        className="library-nav-bar"
      >
        <div
          className="d-flex align-items-center flex-row mb-4"
        >
          <a
            className="logo"
            href="/workflows"
          >
            <img
              src="/static/images/logo.png"
              width="20"
            />
          </a>
          <a
            className="logo-2 ml-3 t-vl-gray "
            href="/workflows"
          >
            Workbench
          </a>
          <div
            className="icon-sort-left-vl-gray ml-auto mt-2 close-open-toggle"
            onClick={[Function]}
          />
        </div>
        <ModuleSearch
          addModule={[Function]}
          items={Array []}
          workflow={
            Object {
              "id": 15,
              "name": "What a workflow!",
            }
          }
        >
          <Autosuggest
            alwaysRenderSuggestions={false}
            focusInputOnSuggestionClick={true}
            getSectionSuggestions={[Function]}
            getSuggestionValue={[Function]}
            highlightFirstSuggestion={false}
            id="1"
            inputProps={
              Object {
                "onChange": [Function],
                "placeholder": "Search Modules",
                "value": "",
              }
            }
            multiSection={true}
            onSuggestionSelected={[Function]}
            onSuggestionsClearRequested={[Function]}
            onSuggestionsFetchRequested={[Function]}
            renderSectionTitle={[Function]}
            renderSuggestion={[Function]}
            renderSuggestionsContainer={[Function]}
            shouldRenderSuggestions={[Function]}
            suggestions={Array []}
            theme={
              Object {
                "container": "react-autosuggest__container",
                "containerOpen": "react-autosuggest__container--open",
                "input": "react-autosuggest__input",
                "inputFocused": "react-autosuggest__input--focused",
                "inputOpen": "react-autosuggest__input--open",
                "sectionContainer": "react-autosuggest__section-container",
                "sectionContainerFirst": "react-autosuggest__section-container--first",
                "sectionTitle": "react-autosuggest__section-title",
                "suggestion": "react-autosuggest__suggestion",
                "suggestionFirst": "react-autosuggest__suggestion--first",
                "suggestionHighlighted": "react-autosuggest__suggestion--highlighted",
                "suggestionsContainer": "react-autosuggest__suggestions-container",
                "suggestionsContainerOpen": "react-autosuggest__suggestions-container--open",
                "suggestionsList": "react-autosuggest__suggestions-list",
              }
            }
          >
            <Autowhatever
              getSectionItems={[Function]}
              highlightedItemIndex={null}
              highlightedSectionIndex={null}
              id="1"
              inputProps={
                Object {
                  "onBlur": [Function],
                  "onChange": [Function],
                  "onFocus": [Function],
                  "onKeyDown": [Function],
                  "placeholder": "Search Modules",
                  "value": "",
                }
              }
              itemProps={[Function]}
              items={Array []}
              multiSection={true}
              renderInputComponent={[Function]}
              renderItem={[Function]}
              renderItemData={
                Object {
                  "query": "",
                }
              }
              renderItemsContainer={[Function]}
              renderSectionTitle={[Function]}
              theme={
                Object {
                  "container": "react-autosuggest__container",
                  "containerOpen": "react-autosuggest__container--open",
                  "input": "react-autosuggest__input",
                  "inputFocused": "react-autosuggest__input--focused",
                  "inputOpen": "react-autosuggest__input--open",
                  "item": "react-autosuggest__suggestion",
                  "itemFirst": "react-autosuggest__suggestion--first",
                  "itemHighlighted": "react-autosuggest__suggestion--highlighted",
                  "itemsContainer": "react-autosuggest__suggestions-container",
                  "itemsContainerOpen": "react-autosuggest__suggestions-container--open",
                  "itemsList": "react-autosuggest__suggestions-list",
                  "sectionContainer": "react-autosuggest__section-container",
                  "sectionContainerFirst": "react-autosuggest__section-container--first",
                  "sectionTitle": "react-autosuggest__section-title",
                }
              }
            >
              <div
                className="react-autosuggest__container"
              >
                <input
                  aria-activedescendant={null}
                  aria-autocomplete="list"
                  aria-expanded={false}
                  aria-haspopup={false}
                  aria-owns="react-autowhatever-1"
                  autoComplete="off"
                  className="react-autosuggest__input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search Modules"
                  role="combobox"
                  type="text"
                  value=""
                />
                <div
                  className="react-autosuggest__suggestions-container"
                  id="react-autowhatever-1"
                />
              </div>
            </Autowhatever>
          </Autosuggest>
        </ModuleSearch>
      </div>
      <div
        className="list"
      />
      <ImportModuleFromGitHub
        moduleAdded={[Function]}
      >
        <div>
          <div
            className="import-module-button content-3 mb-5 t-vl-gray"
            onClick={[Function]}
          >
            IMPORT FROM GITHUB
          </div>
          ;
          <Modal
            autoFocus={true}
            backdrop={true}
            backdropTransitionTimeout={150}
            className="dialog-window"
            fade={true}
            isOpen={false}
            keyboard={true}
            modalTransitionTimeout={300}
            toggle={[Function]}
            zIndex={1050}
          />
        </div>
      </ImportModuleFromGitHub>
    </div>
  </div>
</ModuleLibrary>
`;

exports[`ModuleLibrary renders open when not read-only, with list of module categories 2`] = `
<ModuleLibrary
  addModule={[Function]}
  api={
    Object {
      "getModules": [Function],
    }
  }
  isReadOnly={false}
  workflow={
    Object {
      "id": 15,
      "name": "What a workflow!",
    }
  }
>
  <div>
    <div
      className="module-library-open"
    >
      <div
        className="library-nav-bar"
      >
        <div
          className="d-flex align-items-center flex-row mb-4"
        >
          <a
            className="logo"
            href="/workflows"
          >
            <img
              src="/static/images/logo.png"
              width="20"
            />
          </a>
          <a
            className="logo-2 ml-3 t-vl-gray "
            href="/workflows"
          >
            Workbench
          </a>
          <div
            className="icon-sort-left-vl-gray ml-auto mt-2 close-open-toggle"
            onClick={[Function]}
          />
        </div>
        <ModuleSearch
          addModule={[Function]}
          items={
            Array [
              Object {
                "category": "Add data",
                "description": "Connect a dataset from Enigma's collection via URL.",
                "icon": "url",
                "id": 4,
                "name": "Load from Enigma",
              },
              Object {
                "category": "Add data",
                "description": "Import from your favorite snowshall media",
                "icon": "url",
                "id": 2,
                "name": "Load from Facebork",
              },
              Object {
                "category": "Visualize",
                "description": "Create line, column and scatter plot charts.",
                "icon": "chart",
                "id": 1,
                "name": "Chartbuilder",
              },
            ]
          }
          workflow={
            Object {
              "id": 15,
              "name": "What a workflow!",
            }
          }
        >
          <Autosuggest
            alwaysRenderSuggestions={false}
            focusInputOnSuggestionClick={true}
            getSectionSuggestions={[Function]}
            getSuggestionValue={[Function]}
            highlightFirstSuggestion={false}
            id="1"
            inputProps={
              Object {
                "onChange": [Function],
                "placeholder": "Search Modules",
                "value": "",
              }
            }
            multiSection={true}
            onSuggestionSelected={[Function]}
            onSuggestionsClearRequested={[Function]}
            onSuggestionsFetchRequested={[Function]}
            renderSectionTitle={[Function]}
            renderSuggestion={[Function]}
            renderSuggestionsContainer={[Function]}
            shouldRenderSuggestions={[Function]}
            suggestions={Array []}
            theme={
              Object {
                "container": "react-autosuggest__container",
                "containerOpen": "react-autosuggest__container--open",
                "input": "react-autosuggest__input",
                "inputFocused": "react-autosuggest__input--focused",
                "inputOpen": "react-autosuggest__input--open",
                "sectionContainer": "react-autosuggest__section-container",
                "sectionContainerFirst": "react-autosuggest__section-container--first",
                "sectionTitle": "react-autosuggest__section-title",
                "suggestion": "react-autosuggest__suggestion",
                "suggestionFirst": "react-autosuggest__suggestion--first",
                "suggestionHighlighted": "react-autosuggest__suggestion--highlighted",
                "suggestionsContainer": "react-autosuggest__suggestions-container",
                "suggestionsContainerOpen": "react-autosuggest__suggestions-container--open",
                "suggestionsList": "react-autosuggest__suggestions-list",
              }
            }
          >
            <Autowhatever
              getSectionItems={[Function]}
              highlightedItemIndex={null}
              highlightedSectionIndex={null}
              id="1"
              inputProps={
                Object {
                  "onBlur": [Function],
                  "onChange": [Function],
                  "onFocus": [Function],
                  "onKeyDown": [Function],
                  "placeholder": "Search Modules",
                  "value": "",
                }
              }
              itemProps={[Function]}
              items={Array []}
              multiSection={true}
              renderInputComponent={[Function]}
              renderItem={[Function]}
              renderItemData={
                Object {
                  "query": "",
                }
              }
              renderItemsContainer={[Function]}
              renderSectionTitle={[Function]}
              theme={
                Object {
                  "container": "react-autosuggest__container",
                  "containerOpen": "react-autosuggest__container--open",
                  "input": "react-autosuggest__input",
                  "inputFocused": "react-autosuggest__input--focused",
                  "inputOpen": "react-autosuggest__input--open",
                  "item": "react-autosuggest__suggestion",
                  "itemFirst": "react-autosuggest__suggestion--first",
                  "itemHighlighted": "react-autosuggest__suggestion--highlighted",
                  "itemsContainer": "react-autosuggest__suggestions-container",
                  "itemsContainerOpen": "react-autosuggest__suggestions-container--open",
                  "itemsList": "react-autosuggest__suggestions-list",
                  "sectionContainer": "react-autosuggest__section-container",
                  "sectionContainerFirst": "react-autosuggest__section-container--first",
                  "sectionTitle": "react-autosuggest__section-title",
                }
              }
            >
              <div
                className="react-autosuggest__container"
              >
                <input
                  aria-activedescendant={null}
                  aria-autocomplete="list"
                  aria-expanded={false}
                  aria-haspopup={false}
                  aria-owns="react-autowhatever-1"
                  autoComplete="off"
                  className="react-autosuggest__input"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Search Modules"
                  role="combobox"
                  type="text"
                  value=""
                />
                <div
                  className="react-autosuggest__suggestions-container"
                  id="react-autowhatever-1"
                />
              </div>
            </Autowhatever>
          </Autosuggest>
        </ModuleSearch>
      </div>
      <div
        className="list"
      >
        <ModuleCategory
          collapsed={false}
          isReadOnly={false}
          modules={
            Array [
              <Module
                addModule={[Function]}
                icon="url"
                id={4}
                name="Load from Enigma"
            />,
              <Module
                addModule={[Function]}
                icon="url"
                id={2}
                name="Load from Facebork"
            />,
            ]
          }
          name="Add data"
          setOpenCategory={[Function]}
        >
          <div
            className="card b-l-gray library-card-category-open"
          >
            <div
              className="cat-open"
            >
              <div
                className="first-level d-flex align-items-center"
                onClick={[Function]}
              >
                <div
                  className="cat-container"
                >
                  <div
                    className="icon-sort-down-vl-gray small-sort button-icon-library ml-3 mb-1"
                  />
                  <span
                    className="content-3 t-vl-gray ml-3 ml-cat"
                  >
                    Add data
                  </span>
                </div>
              </div>
              <div>
                <Collapse
                  className=""
                  delay={
                    Object {
                      "hide": 350,
                      "show": 350,
                    }
                  }
                  isOpen={true}
                  onClosed={[Function]}
                  onOpened={[Function]}
                  tag="div"
                >
                  <div
                    className="collapse show"
                    style={Object {}}
                  >
                    <div
                      className="ml-list"
                    >
                      <Module
                        addModule={[Function]}
                        icon="url"
                        id={4}
                        name="Load from Enigma"
                      >
                        <div
                          className="card"
                          style={
                            Object {
                              "border": 0,
                              "borderRadius": 0,
                            }
                          }
                        >
                          <div
                            className=""
                            onClick={[Function]}
                          >
                            <div
                              className="second-level d-flex flex-row align-items-center"
                            >
                              <div
                                className="ml-icon-container"
                              >
                                <div
                                  className="icon-url ml-icon"
                                />
                              </div>
                              <div>
                                <div
                                  className="content-5 ml-module-name"
                                >
                                  Load from Enigma
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </Module>
                      <Module
                        addModule={[Function]}
                        icon="url"
                        id={2}
                        name="Load from Facebork"
                      >
                        <div
                          className="card"
                          style={
                            Object {
                              "border": 0,
                              "borderRadius": 0,
                            }
                          }
                        >
                          <div
                            className=""
                            onClick={[Function]}
                          >
                            <div
                              className="second-level d-flex flex-row align-items-center"
                            >
                              <div
                                className="ml-icon-container"
                              >
                                <div
                                  className="icon-url ml-icon"
                                />
                              </div>
                              <div>
                                <div
                                  className="content-5 ml-module-name"
                                >
                                  Load from Facebork
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </Module>
                    </div>
                  </div>
                </Collapse>
              </div>
            </div>
          </div>
        </ModuleCategory>
        <ModuleCategory
          collapsed={true}
          isReadOnly={false}
          modules={
            Array [
              <Module
                addModule={[Function]}
                icon="chart"
                id={1}
                name="Chartbuilder"
            />,
            ]
          }
          name="Visualize"
          setOpenCategory={[Function]}
        >
          <div
            className="card b-l-gray library-card-category-closed"
          >
            <div
              className="cat-open"
            >
              <div
                className="first-level d-flex align-items-center"
                onClick={[Function]}
              >
                <div
                  className="cat-container"
                >
                  <div
                    className="icon-sort-right-vl-gray button-icon-library ml-3"
                  />
                  <span
                    className="content-3 t-vl-gray ml-3 ml-cat"
                  >
                    Visualize
                  </span>
                </div>
              </div>
              <div>
                <Collapse
                  className=""
                  delay={
                    Object {
                      "hide": 350,
                      "show": 350,
                    }
                  }
                  isOpen={false}
                  onClosed={[Function]}
                  onOpened={[Function]}
                  tag="div"
                >
                  <div
                    className="collapse"
                    style={Object {}}
                  >
                    <div
                      className="ml-list"
                    >
                      <Module
                        addModule={[Function]}
                        icon="chart"
                        id={1}
                        name="Chartbuilder"
                      >
                        <div
                          className="card"
                          style={
                            Object {
                              "border": 0,
                              "borderRadius": 0,
                            }
                          }
                        >
                          <div
                            className=""
                            onClick={[Function]}
                          >
                            <div
                              className="second-level d-flex flex-row align-items-center"
                            >
                              <div
                                className="ml-icon-container"
                              >
                                <div
                                  className="icon-chart ml-icon"
                                />
                              </div>
                              <div>
                                <div
                                  className="content-5 ml-module-name"
                                >
                                  Chartbuilder
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </Module>
                    </div>
                  </div>
                </Collapse>
              </div>
            </div>
          </div>
        </ModuleCategory>
      </div>
      <ImportModuleFromGitHub
        moduleAdded={[Function]}
      >
        <div>
          <div
            className="import-module-button content-3 mb-5 t-vl-gray"
            onClick={[Function]}
          >
            IMPORT FROM GITHUB
          </div>
          ;
          <Modal
            autoFocus={true}
            backdrop={true}
            backdropTransitionTimeout={150}
            className="dialog-window"
            fade={true}
            isOpen={false}
            keyboard={true}
            modalTransitionTimeout={300}
            toggle={[Function]}
            zIndex={1050}
          />
        </div>
      </ImportModuleFromGitHub>
    </div>
  </div>
</ModuleLibrary>
`;
